# hs-boehmgc

./: .gitignore  Setup.hs  hs-boehmgc.cabal  makeboehm.sh
gc-7.2/: Makefile  bdw-gc.pc  config.status  gctest  hugetest  leaktest  libcord.la  libgc.la  libstaticrootslib.la  libtool  middletest  realloc_test  smashtest  staticrootstest
gc-7.2/.deps/: allchblk.Plo  alloc.Plo  backgraph.Plo  blacklst.Plo  checksums.Plo  cordbscs.Plo  cordprnt.Plo  cordtest.Plo  cordxtra.Plo  dbg_mlc.Plo  dyn_load.Plo  finalize.Plo  gc_dlopen.Plo  gcj_mlc.Plo  headers.Plo  huge_test.Po  leak_test.Po  mach_dep.Plo  malloc.Plo  mallocx.Plo  mark.Plo  mark_rts.Plo  middle.Po  misc.Plo  new_hblk.Plo  obj_map.Plo  os_dep.Plo  pcr_interface.Plo  ptr_chck.Plo  realloc_test.Po  reclaim.Plo  smash_test.Po  specific.Plo  staticrootslib.Plo  staticrootstest.Po  stubborn.Plo  test.Po  thread_local_alloc.Plo  typd_mlc.Plo
gc-7.2/.libs/: gctest  hugetest  leaktest  libcord.lai  libcord.so.1.0.3  libcord.so.1.0.3T  libgc.lai  libgc.so.1.0.3  libstaticrootslib.lai  libstaticrootslib.so.1.0.3  lt-gctest  lt-hugetest  lt-leaktest  lt-middletest  lt-realloc_test  lt-smashtest  lt-staticrootstest  middletest  realloc_test  smashtest  staticrootstest
gc-7.2/include/private/: config.h
gc-7.2/libatomic_ops/: Makefile  config.status
gc-7.2/libatomic_ops/doc/: Makefile
gc-7.2/libatomic_ops/pkgconfig/: atomic_ops-uninstalled.pc  atomic_ops.pc
gc-7.2/libatomic_ops/src/: Makefile
gc-7.2/libatomic_ops/src/atomic_ops/: Makefile
gc-7.2/libatomic_ops/tests/: Makefile
src/Mate/GC/: Boehm.hs
(+1 files in other folders)
